CAMEL-18608: camel-spark - Fix compatibility issues with JDK 17